<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10_dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/dialog_fragment_donate_money_title"
        android:textColor="@color/black_87"
        android:textSize="@dimen/dimen_20_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hintDonationOffer"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12_dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/dialog_fragment_donate_money_hint_donation_offer"
        android:textColor="@color/black_54"
        android:textSize="@dimen/dimen_16_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/donationOffer"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hintDonationOffer"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/donationOffer1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dimen_0_dp"
            android:text="@string/dialog_fragment_donate_money_donation_offer_1"
            android:textSize="@dimen/dimen_12_sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/donationOffer2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dimen_0_dp"
            android:text="@string/dialog_fragment_donate_money_donation_offer_2"
            android:textSize="@dimen/dimen_12_sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/donationOffer3"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dimen_0_dp"
            android:text="@string/dialog_fragment_donate_money_donation_offer_3"
            android:textSize="@dimen/dimen_12_sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/donationOffer4"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dimen_0_dp"
            android:text="@string/dialog_fragment_donate_money_donation_offer_4"
            android:textSize="@dimen/dimen_12_sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/hintDonationEditText"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:gravity="center"
        android:text="@string/dialog_fragment_donate_money_hint_donation_edittext"
        android:textColor="@color/black_54"
        android:textSize="@dimen/dimen_16_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donationOffer" />

    <EditText
        android:id="@+id/donationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_13_dp"
        android:drawableStart="@drawable/ic_ruble"
        android:drawablePadding="@dimen/dimen_10_dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/dialog_fragment_donate_money_donation_edittext"
        android:inputType="number"
        android:maxLength="7"
        android:textColor="@color/black_87"
        android:textColorHint="@color/black_38"
        android:textSize="@dimen/dimen_16_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hintDonationEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>