<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="center"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/light_green">

            <ImageView
                android:id="@+id/avatarUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/no_photo" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:title="@string/profile_screen_name" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.screens.profile.ProfileFragment">

            <TextView
                android:id="@+id/surnameAndName"
                style="@style/TextViewPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20_dp"
                android:layout_marginTop="@dimen/dimen_24_dp"
                android:fontFamily="@font/roboto_regular"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/profile_user_name" />

            <TextView
                android:id="@+id/personalDataTitle"
                style="@style/TextViewSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20_dp"
                android:layout_marginTop="@dimen/dimen_26_dp"
                android:text="@string/profile_personal_data_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surnameAndName" />

            <TextView
                android:id="@+id/dateOfBirthHint"
                style="@style/TextViewHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30_dp"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:text="@string/profile_user_birthday_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personalDataTitle" />

            <TextView
                android:id="@+id/dateOfBirth"
                style="@style/TextViewSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30_dp"
                android:layout_marginTop="@dimen/dimen_5_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateOfBirthHint"
                tools:text="@string/profile_user_birthday" />

            <TextView
                android:id="@+id/fieldOfActivityHint"
                style="@style/TextViewHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30_dp"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:text="@string/profile_user_field_of_activity_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />

            <TextView
                android:id="@+id/fieldOfActivity"
                style="@style/TextViewSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30_dp"
                android:layout_marginTop="@dimen/dimen_5_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fieldOfActivityHint"
                tools:text="@string/profile_user_field_of_activity" />

            <TextView
                android:id="@+id/settingsTitle"
                style="@style/TextViewSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20_dp"
                android:layout_marginTop="@dimen/dimen_26_dp"
                android:text="@string/profile_settings_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fieldOfActivity" />

            <TextView
                android:id="@+id/getPush"
                style="@style/TextViewSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30_dp"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:text="@string/profile_get_push_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switcherGetPush"
                style="@style/Switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_26_dp"
                app:layout_constraintBottom_toBottomOf="@+id/getPush"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/getPush"
                app:layout_constraintTop_toTopOf="@+id/getPush"
                tools:checked="true" />

            <Button
                android:id="@+id/signOutButton"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30_dp"
                android:text="@string/profile_logout_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/getPush" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
