<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_two">

    <TextView
        android:id="@+id/nothingFound"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_38_dp"
        android:gravity="center"
        android:text="@string/search_by_events_nothing_found"
        android:textColor="@color/black_70"
        android:textSize="@dimen/dimen_14_sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/blankSearchImage"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_80_dp"
        android:layout_marginTop="@dimen/dimen_52_dp"
        android:layout_marginEnd="@dimen/dimen_80_dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search_by_events_icon_zoom" />

    <TextView
        android:id="@+id/blankSearchHint"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40_dp"
        android:layout_marginTop="@dimen/dimen_38_dp"
        android:layout_marginEnd="@dimen/dimen_40_dp"
        android:text="@string/search_by_events_search_hint"
        android:textAlignment="center"
        android:textColor="@color/black_70"
        android:textSize="@dimen/dimen_14_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blankSearchImage" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_0_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_event" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/blankSearchExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_38_dp"
        android:layout_marginBottom="@dimen/dimen_40_dp"
        android:text="@string/search_by_events_search_example"
        android:textAlignment="textEnd"
        android:textColor="@color/black_70"
        android:textSize="@dimen/dimen_14_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/blankSearchExample1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/blankSearchImage"
        app:layout_constraintTop_toBottomOf="@+id/blankSearchHint"
        app:layout_constraintVertical_bias="0"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/blankSearchExample1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_by_events_search_example_1"
        android:textColor="@color/leaf"
        android:textSize="@dimen/dimen_14_sp"
        app:layout_constraintBottom_toBottomOf="@+id/blankSearchExample"
        app:layout_constraintEnd_toEndOf="@id/blankSearchImage"
        app:layout_constraintStart_toEndOf="@id/blankSearchExample"
        app:layout_constraintTop_toTopOf="@+id/blankSearchExample"
        tools:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
